comente detalles que no uso.

--- a/css/style.css
+++ b/css/style.css
@@ -178,7 +178,7 @@ p.a {
 
 /* testimonial */
 
-.testimonial-card {
+/*.testimonial-card {
   background: var(--bs-black);
   color: var(--bs-white);
 }
